<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/inner_background">

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.5"
    tools:context=".ClassTeacherAddsStudents">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/disp_class_name"
        android:textStyle="bold"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rn"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:textAlignment="center"
        android:text="@string/roll_num"
        android:id="@+id/rn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/roll_num"
        app:layout_constraintBottom_toTopOf="@id/sn"/>

    <EditText
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/roll_num"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/rn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/stud_name"/>

    <TextView
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:textAlignment="center"
        android:text="@string/stud_name"
        android:id="@+id/sn"
        app:layout_constraintTop_toBottomOf="@id/rn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/stud_name"
        app:layout_constraintBottom_toTopOf="@id/add"/>

    <EditText
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/stud_name"
        app:layout_constraintTop_toBottomOf="@id/roll_num"
        app:layout_constraintStart_toEndOf="@id/sn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/add"/>

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="15dp"
        android:id="@+id/add"
        android:text="@string/add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stud_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</android.support.constraint.ConstraintLayout>
    <!-- A RecyclerView with some commonly used attributes -->
    <android.support.v7.widget.RecyclerView

        android:id="@+id/teacher_add_recycler_view"
        android:scrollbars="vertical"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5"/>
</LinearLayout>